--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -42,8 +42,8 @@ html,body{
     cursor: pointer;
 }
 
-#mainContainer #navContainer #navRowBar #mainSearchInput{
-    width:268px;
+#mainContainer #navContainer #navRowBar #navRowBarSearch #mainSearchInput{
+    width:18.3vw;
     height:36px;
     background: rgba(var(--b3f,250,250,250),1);
     color: rgba(var(--f52,142,142,142),1);
@@ -56,11 +56,13 @@ html,body{
     transition:0.3s ease;
 }
 
-#mainContainer #navContainer #navRowBar #searchIcon{
-    position:absolute;
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchIcon{
+    position:relative;
     font-size:12px;
     color:#8d8d8d;
-    left:605px;
+    top:0px;
+    left:25px;
+    
 }
 
 #mainContainer #navContainer #navRowBar #navBtns{
@@ -381,16 +383,15 @@ html,body{
     margin:0;
 }
 
-#mainContainer #bodyContainer #sideContainer{
-    max-width:300px;
-    width:100%;
-    height:100vh;
-    position:fixed;
-    top:110px;
-    left:61vw;
-    margin-bottom:30px;
-    padding:0;
+#mainContainer #bodyContainer #sideWrapper{
+    position:relative;
+    top: 53px;
 }
+
+#mainContainer #bodyContainer #sideWrapper #sideContainer{
+    position:fixed;
+}
+
 
 #mainContainer #bodyContainer #sideContainer #profileSwap #profileSwapBox{
     display:flex;
