--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
                         <header>Westagram</header>
                         <input class='loginInput' maxlength='75' type='text' required='true' placeholder="전화번호, 사용자 이름 또는 이메일">
                         <input class='loginInput' type='password' required='true' placeholder='비밀번호'>
-                        <button class='loginBtn'>로그인</button>
+                        <button class='loginBtn' onclick='loginFunc()'>로그인</button>
                         <section id='loginHrContainer'>
                             <div class='loginHr'></div>
                             <span>또는</span>
@@ -25,9 +25,9 @@
                         </section>
                         <section id='inputBoxFooter'>
                             <i class="fab fa-facebook-square" id='facebookLogo'></i>
-                            <span>Facebook으로 로그인</span>
+                            <span id='facebookLogin' onclick='facebookLoginFunc()'>Facebook으로 로그인</span>
                         </section>
-                        <span id='forgetPw'>비밀번호를 잊으셨나요?</p>
+                        <span id='forgetPw' onclick='forgetPWFunc()'>비밀번호를 잊으셨나요?</p>
                     </div>
                     <div id='registerBox'>
                         <span>계정이 없으신가요?</span>
