--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -14,6 +14,19 @@ html,body{
     background-color: rgba(var(--b3f,250,250,250),1);
 }
 
+#hideContainer{
+    position:fixed;
+    width:100%;
+    min-height:100%;
+    z-index:10000;
+    display:none;
+}
+
+#hideContainer.active{
+    display:block;
+}
+
+
 #mainContainer #navContainer{
     width:100%;
     height:60px;
@@ -21,6 +34,7 @@ html,body{
     display:flex;
     flex-direction:row;
     justify-content: center;
+    align-content:self;
     background-color: rgba(var(--d87,255,255,255),1);
     border-bottom: 1px solid rgba(var(--b6a,219,219,219),1);
     z-index:9999;
@@ -31,18 +45,26 @@ html,body{
     width:935px;
     display:flex;
     flex-direction:row;
-    justify-content: center;
-    align-items: center;
 }
 
 #mainContainer #navContainer #navRowBar header{
+    align-self:center;
     font-size:34px;
     flex:1 0 127px;
     font-family:'Billabong', sans-serif;
-    cursor: pointer;
 }
 
-#mainContainer #navContainer #navRowBar #navRowBarSearch #mainSearchInput{
+#mainContainer #navContainer #navRowBar header span{
+    cursor:pointer;
+}
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch{
+    display: flex;
+    flex-direction: column;
+    align-self:center;
+}
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch #navRowBarSearchInput #mainSearchInput{
     width:18.3vw;
     height:36px;
     background: rgba(var(--b3f,250,250,250),1);
@@ -56,6 +78,57 @@ html,body{
     transition:0.3s ease;
 }
 
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchResultBox{
+    position:absolute;
+    top:45px;
+    width:18.3vw;
+    height:100%;
+    min-height:180px;
+    display:none;
+}
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchResultBox #searchArrowDiv{
+    position: relative;
+    width: 14px;
+    height: 14px;
+    top:10px;
+    left:45%;
+    background: rgba(var(--d87,255,255,255),1);
+    box-shadow: 0 0 5px 1px rgba(var(--jb7,0,0,0),.0975);
+    border: 1px solid rgba(var(--f23,255,255,255),1);
+    transform: rotate(45deg);
+    z-index:2;
+}
+
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchResultBox #searchResult{
+    position:relative;
+    display:flex;
+    flex-direction: column; 
+    width:100%;
+    height: 100%;
+    background: rgba(var(--d87,255,255,255),1);
+    box-shadow: 0 0 5px 1px rgba(var(--jb7,0,0,0),.0975);
+    border-radius: 6px;
+    transition:0.3s ease;
+    z-index:2;
+    margin:0;
+    padding:0;
+
+}
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchResultBox #searchResult span{
+    border-bottom:1px solid #adadad;
+    padding:3px 0 ;
+    padding-left:10px;
+    margin-bottom:3px;
+}
+
+#mainContainer #navContainer #navRowBar #navRowBarSearch #searchResultBox #searchResult span:hover{
+    background-color:#ededed
+}
+
+
 #mainContainer #navContainer #navRowBar #navRowBarSearch #searchIcon{
     position:relative;
     font-size:12px;
@@ -66,25 +139,69 @@ html,body{
 }
 
 #mainContainer #navContainer #navRowBar #navBtns{
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    align-self:center;
     flex:1 0 127px;
     font-size:25px;
 }
 
-#mainContainer #navContainer #navRowBar #navBtns i{
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox{
+    display:flex;
+    flex-direction: column;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsArea{
+    display:flex;
+    flex-direction:row;
+    justify-content: flex-end;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsArea i{
     margin-right:23px;
     cursor:pointer;
 }
 
-#mainContainer #navContainer #navRowBar #navBtns #profileImg{
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsArea #profileImg{
     width:28px;
     height:28px;
     background-image:url('../images/jh_profile.jpg');
     background-size:30px 30px;
     border-radius:50%;
     cursor:pointer;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsFloatingBox{
+    position:absolute;
+    align-self: flex-end;
+    visibility: hidden;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsFloatingBox.active{
+    display:flex;
+    flex-direction: column;
+    visibility: visible;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsFloatingBox #navBtnsArrowDiv{
+    position: relative;
+    width: 14px;
+    height: 14px;
+    top:35px;
+    background: rgba(var(--d87,255,255,255),1);
+    box-shadow: 0 0 5px 1px rgba(var(--jb7,0,0,0),.0975);
+    border: 1px solid rgba(var(--f23,255,255,255),1);
+    transform: rotate(45deg);
+    z-index:10000;
+}
+
+#mainContainer #navContainer #navRowBar #navBtns #navBtnsBox #navBtnsFloatingBox #navBtnsFloatingArea{
+    position:relative;
+    top:25px;
+    width:256px;
+    background: rgba(var(--d87,255,255,255),1);
+    box-shadow: 0 0 5px 1px rgba(var(--jb7,0,0,0),.0975);
+    border-radius: 6px;
+    z-index:10000;
+    padding:4px 4px 4px 10px;
 }
 
 #mainContainer #bodyContainer{
@@ -149,9 +266,6 @@ html,body{
 #mainContainer #bodyContainer #feedContainer #feeds{
     background: rgba(var(--d87,255,255,255),1);
     border: 1px solid rgba(var(--b6a,219,219,219),1);
-    width:100%;
-    max-height:900px;
-    min-height:inherit;
     margin-bottom:100px;
 }
 
@@ -216,7 +330,6 @@ html,body{
     background-image:url('../images/cafe_photos.jpg');
     background-size:cover;
     background-repeat: no-repeat;
-    width:100%;
     height:100%;
 }
 
@@ -334,6 +447,21 @@ html,body{
     margin-top:5px;
     margin-left:15px;
 }
+
+#mainContainer #bodyContainer #feedContainer #feeds #feedCommentsBox #removeBtn{
+    float:right;
+    font-size:12px;
+    color:#adadad;
+    margin-right:10px;
+}
+
+#mainContainer #bodyContainer #feedContainer #feeds #feedCommentsBox i{
+    float:right;
+    margin-top:2px;
+    margin-right:20px;
+}
+
+
 
 #mainContainer #bodyContainer #feedContainer #feeds #feedCommentsBox #feedCommentsBold{
     font-weight:600;
