--- a/views/main.html
+++ b/views/main.html
@@ -7,21 +7,46 @@
         <link rel="stylesheet" href="../css/mainStyle.css">
     </head>
     <body>
+        <article id='hideContainer' onclick='removeNavActive()'>
+                
+        </article>
         <main id='mainContainer'>
             <article id='navContainer'>
                 <nav id='navRowBar'>
-                    <header>Westagram</header>
+                    <header><span onclick='navGoMain()'>Westagram</span></header>
                     <div id='navRowBarSearch'>
-                        <i class="fas fa-search" id='searchIcon'></i>
-                        <input id='mainSearchInput' type='text' placeholder="검색">
+                        <div id='navRowBarSearchInput'>
+                            <i class="fas fa-search" id='searchIcon'></i>
+                            <input id='mainSearchInput' type='text' placeholder="검색">
+                        </div>
+                        <div id='searchResultBox'>
+                            <div id='searchArrowDiv'>
+        
+                            </div>
+                            <div id='searchResult'>
+                                
+                            </div>
+                        </div>
                     </div>
                     <section id='navBtns'>
-                        <i class="fas fa-home"></i>
-                        <i class="fas fa-location-arrow"></i>
-                        <i class="far fa-plus-square"></i>
-                        <i class="far fa-compass"></i>
-                        <i class="far fa-heart"></i>
-                        <div id='profileImg'></div>
+                        <div id='navBtnsBox'>
+                            <section id='navBtnsArea'>
+                                <i class="fas fa-home" onclick='navGoMain()'></i>
+                                <i class="fas fa-location-arrow" onclick='navDirectMessage()'></i>
+                                <i class="far fa-plus-square" onclick='navNewPost()'></i>
+                                <i class="far fa-compass" onclick='navTripFeeds()'></i>
+                                <i class="far fa-heart" onclick='navViewLikes()'></i>
+                                <div id='profileImg' onclick='navViewProfile()'></div>
+                            </section>
+                            <section id='navBtnsFloatingBox'>
+                                <div id='navBtnsArrowDiv'>
+        
+                                </div>
+                                <div id='navBtnsFloatingArea'>
+                                    
+                                </div>
+                            </section>
+                        </div>
                     </section>
                 </nav>
             </article>
@@ -53,7 +78,7 @@
                         <header id='feedProfile'>
                             <div id='feedProfileInfo'>
                                 <div id='feedProfileImg'>
-
+                            
                                 </div>
                                 <div id='feedProfileDetail'>    
                                     <a href='#!'>lIlIlIlI</a>
@@ -66,7 +91,7 @@
                         </header>
                         <section id='feedImg'>
                             <div id='feedImgBox'>
-
+                                
                             </div>
                             <div id='feedImgLengthDot'>
                                 <i class="fas fa-circle"></i>
@@ -101,7 +126,7 @@
                         </section>
                         <section id='feedComments'>
                             <div id='feedCommentsBox' name='0'>
-                                <span><span id='feedCommentsBold'>test</span>안녕!</span>
+                                <span><span id='feedCommentsBold'>test</span>안녕! <i class="far fa-heart" onclick='likeClick(event)'></i> <span id='removeBtn' onclick='removeComment(event)'>삭제</span></span>
                             </div>
                         </section>
                         <section id='feedContentsTime'>
@@ -169,13 +194,13 @@
                         </section>
                         <section id='feedContents'>
                             <div id='feedContentsBox'>
-                                <span id='feedContentsComment'><span id='feedContentsBold'>lIlIlIlI</span><span id='feedContentsCommentBody'>인스타그램 클로닝 테스트! 인스타그램 클로닝 테스트! 인스타그램 클로닝 테스트! 인스타그램 클로닝 테스트! 인스타그램 클로닝 테스트!</span></span>
+                                <span id='feedContentsComment'><span id='feedContentsBold'>lIlIlIlI</span><span id='feedContentsCommentBody'>으아으아으ㅏ으아ㅡ아ㅡ아ㅡ아으ㅏ믈나으람ㄴ으란으린아럽ㅈ대겨맨ㅇ랴ㅓ키라푸ㅐ데ㅐ쟉제대ㅑㅓㄹ </span></span>
                                 <button id='feedExtendContents' name='1' onclick='feedExtendContents(event)'>더 보기</button>
                             </div>
                         </section>
                         <section id='feedComments'>
                             <div id='feedCommentsBox' name='1'>
-                                <span><span id='feedCommentsBold'>test</span>안녕!</span>
+                                <span><span id='feedCommentsBold'>test</span>안녕! <i class="far fa-heart" onclick='likeClick(event)'></i> <span id='removeBtn' onclick='removeComment(event)'>삭제</span></span>
                             </div>
                         </section>
                         <section id='feedContentsTime'>
@@ -284,10 +309,8 @@
                             <div id='sideFooterBottom'>
                                 <span>© 2021 WESTAGRAM FROM KJH</span>
                             </div>
-                            
                         </section>
                     </section>
-                    
                 </article>
             </article>
         </main>
