[Update] 작업 파일 이동

--- a/views/main.html
+++ b/views/main.html
@@ -53,7 +53,7 @@
             <article id='bodyContainer'>
                 <article id='feedContainer'>
                     <section id='friendsFeed'>
-                        <ul>
+                        <ul id='friendsFeedUl'>
                             <li>
                                 <div id='friendImgBorder'>
                                     <div id='friendImg'></div>
@@ -72,7 +72,42 @@
                                 </div>
                                 <span>friends3</span>
                             </li>
+                            <li>
+                                <div id='friendImgBorder'>
+                                    <div id='friendImg'></div>
+                                </div>
+                                <span>friends3</span>
+                            </li>
+                            <li>
+                                <div id='friendImgBorder'>
+                                    <div id='friendImg'></div>
+                                </div>
+                                <span>friends3</span>
+                            </li>
+                            <li>
+                                <div id='friendImgBorder'>
+                                    <div id='friendImg'></div>
+                                </div>
+                                <span>friends3</span>
+                            </li>
+                            <li>
+                                <div id='friendImgBorder'>
+                                    <div id='friendImg'></div>
+                                </div>
+                                <span>friends3</span>
+                            </li>
+                            <li>
+                                <div id='friendImgBorder'>
+                                    <div id='friendImg'></div>
+                                </div>
+                                <span>friends3</span>
+                            </li>
                         </ul>
+                        
+                    </section>
+                    <section id='friendsFeedsBtnArea'>
+                        <button id='friendsFeedPrev' onclick='friendsFeedScrollPrev()'> <i class="fas fa-chevron-left"></i> </button>
+                        <button id='friendsFeedNext' onclick='friendsFeedScrollNext()'> <i class="fas fa-chevron-right"></i> </button>
                     </section>
                     <section id='feeds'>
                         <header id='feedProfile'>
